src/optimizer/core/src/snapshots/qwik_core__test__example_1.snap
---
source: src/test.rs
expression: "if let Some(code) = s.code { code } else { \"\".to_string() }"

---
export const Header_onRender_h = qHook(()=>{
    return (<div onClick={qHook("Header_onRender_div_onClick_h")}/>);
});
export const Header_onRender_div_onClick_h = qHook((ctx)=>console.log(ctx)
);
export const Header_onMount_h = qHook(()=>{
    console.log("mount");
});
const Header = qComponent({
    "onMount": qHook("Header_onMount_h"),
    onRender: qHook("Header_onRender_h")
});

