src/optimizer/core/src/snapshots/qwik_core__test__example_13.snap
---
source: src/optimizer/core/src/test.rs
assertion_line: 811
expression: output

---
==INPUT==


import { qHook, qComponent, onRender, h } from '@builder.io/qwik';
export const Header = qComponent(() => {
    onRender(() => console.log("hello sym2"), "2sym")
});

    
============================= project/test.tsx ==

import * as qwik from "@builder.io/qwik";
import { qComponent } from '@builder.io/qwik';
export const Header = /*#__PURE__*/ qComponent(qwik.qrl(()=>import("../entry_hooks")
, "Header_onmount"));

============================= h_test_header_onrender.tsx ==

import * as qwik from "@builder.io/qwik";
export const Header_onRender = ()=>console.log("hello sym2")
;

============================= h_test_header_onmount.tsx ==

import * as qwik from "@builder.io/qwik";
import { onRender } from "@builder.io/qwik";
export const Header_onmount = ()=>{
    onRender(qwik.qrl(()=>import("../entry_hooks")
    , "Header_onRender"), "2sym");
};

============================= entry_hooks.ts (ENTRY POINT)==

export { Header_onRender } from "./h_test_header_onrender";
export { Header_onmount } from "./h_test_header_onmount";

== HOOKS ==

[
  {
    "origin": "project/test.tsx",
    "name": "Header_onRender",
    "entry": "entry_hooks",
    "canonicalFilename": "h_test_header_onrender"
  },
  {
    "origin": "project/test.tsx",
    "name": "Header_onmount",
    "entry": "entry_hooks",
    "canonicalFilename": "h_test_header_onmount"
  }
]

== DIAGNOSTICS ==

[]
