src/optimizer/core/src/snapshots/qwik_core__test__example_2-2.snap
---
source: src/test.rs
expression: s.map.unwrap()

---
{"version":3,"sources":["test.tsx"],"names":[],"mappings":"AACA,MAAM,CAAC,KAAK,CAAC,MAAM,GAAG,UAAU,CAAC,CAAC;IAChC,CAAS;IACT,QAAQ;AAKV,CAAC;8BANY,KAAK,KAAO,CAAC;IAAC,OAAO,CAAC,GAAG,CAAC,CAAO;AAAE,CAAC;2CAG7B,KAAK,EAAE,GAAG,GAAK,OAAO,CAAC,GAAG,CAAC,GAAG;;+BAFtC,KAAK,KAAO,CAAC;IACrB,MAAM,GACH,GAAG,CAAC,OAAO;AAEhB,CAAC"}
