src/optimizer/core/src/snapshots/qwik_core__test__example_2.snap
---
source: src/test.rs
expression: output

---
==INPUT==


export const Header = qComponent({
  "onMount": qHook(() => { console.log("mount") }),
  onRender: qHook(() => {
    return (
      <div onClick={qHook((ctx) => console.log(ctx))}/>
    );
  })
});
    
============================= /user/qwik/src/test.js==

export const Header = qComponent({
    "onMount": qHook("h_test_Header_onMount#Header_onMount"),
    onRender: qHook("h_test_Header_onRender#Header_onRender")
});

============================= /user/qwik/src/h_test_Header_onMount==

export const Header_onMount = qHook(()=>{
    console.log("mount");
});

============================= /user/qwik/src/h_test_Header_onRender_div_onClick==

export const Header_onRender_div_onClick = qHook((ctx)=>console.log(ctx)
);

============================= /user/qwik/src/h_test_Header_onRender==

export const Header_onRender = qHook(()=>{
    return (<div onClick={qHook("h_test_Header_onRender_div_onClick#Header_onRender_div_onClick")}/>);
});

== HOOKS ==

[
  {
    "origin": "test.tsx",
    "name": "Header_onMount",
    "entry": null,
    "canonical_filename": "h_test_Header_onMount",
    "local_decl": [],
    "local_idents": [
      "console",
      "log",
      "qHook"
    ]
  },
  {
    "origin": "test.tsx",
    "name": "Header_onRender_div_onClick",
    "entry": null,
    "canonical_filename": "h_test_Header_onRender_div_onClick",
    "local_decl": [
      "ctx"
    ],
    "local_idents": [
      "console",
      "ctx",
      "log",
      "qHook"
    ]
  },
  {
    "origin": "test.tsx",
    "name": "Header_onRender",
    "entry": null,
    "canonical_filename": "h_test_Header_onRender",
    "local_decl": [],
    "local_idents": [
      "div",
      "onClick",
      "qHook"
    ]
  }
]

== DIAGNOSTICS ==

[]
