src/optimizer/core/src/snapshots/qwik_core__test__example_3-2.snap
---
source: src/test.rs
expression: s.map.unwrap()

---
{"version":3,"sources":["test.tsx"],"names":[],"mappings":"AACA,MAAM,CAAC,KAAK,CAAC,GAAG,OAAS,CAAC;IACtB,KAAK,CAAC,MAAM,GAAG,UAAU,CAAC,CAAC;QACvB,CAAS;QACT,QAAQ;IAKZ,CAAC;IACD,MAAM,CAAC,MAAM;AACjB,CAAC;kCARkB,KAAK,KAAO,CAAC;IAAC,OAAO,CAAC,GAAG,CAAC,CAAO;AAAE,CAAC;+CAG7B,KAAK,EAAE,GAAG,GAAK,OAAO,CAAC,GAAG,CAAC,GAAG;;mCAFtC,KAAK,KAAO,CAAC;IACnB,MAAM,GACL,GAAG,CAAC,OAAO;AAEhB,CAAC"}
