src/optimizer/core/src/snapshots/qwik_core__test__example_3.snap
---
source: src/optimizer/core/src/test.rs
assertion_line: 737
expression: output

---
==INPUT==


import { qHook, qComponent, onRender, h } from '@builder.io/qwik';
export const App = () => {
    const Header = qComponent(() => {
        console.log("mount");
        onRende(() => {
            return (
                <div onClick={qHook((ctx) => console.log(ctx))}/>
            );
        });
    });
    return Header;
});
    
============================= test.tsx ==

import * as __qwik__ from "@builder.io/qwik";
import { qComponent } from '@builder.io/qwik';
export const App = ()=>{
    const Header = /*#__PURE__*/ qComponent(__qwik__.qrl(()=>import("./h_test_app_header")
    , "App_Header"));
    return Header;
};

============================= h_test_app_header_div_onclick.tsx (ENTRY POINT)==

import * as __qwik__ from "@builder.io/qwik";
export const App_Header_div_onClick = (ctx)=>console.log(ctx)
;

============================= h_test_app_header.tsx (ENTRY POINT)==

import * as __qwik__ from "@builder.io/qwik";
export const App_Header = ()=>{
    console.log("mount");
    onRende(()=>{
        return <div onClick={__qwik__.qrl(()=>import("./h_test_app_header_div_onclick")
        , "App_Header_div_onClick")}/>;
    });
};

== HOOKS ==

[
  {
    "origin": "test.tsx",
    "name": "App_Header_div_onClick",
    "entry": null,
    "canonicalFilename": "h_test_app_header_div_onclick"
  },
  {
    "origin": "test.tsx",
    "name": "App_Header",
    "entry": null,
    "canonicalFilename": "h_test_app_header"
  }
]

== DIAGNOSTICS ==

[]
