src/optimizer/core/src/snapshots/qwik_core__test__example_4.snap
---
source: src/optimizer/core/src/test.rs
expression: output
---
==INPUT==


import { $, component$ } from '@builder.io/qwik';
export function App() {
    const Header = component$(() => {
        console.log("mount");
        return (
            <div onClick={$((ctx) => console.log(ctx))}/>
        );
    });
    return Header;
}

============================= test.tsx ==

import * as qwik from "@builder.io/qwik";
import { componentQrl } from "@builder.io/qwik";
export function App() {
    const Header = /*#__PURE__*/ componentQrl(qwik.qrl(()=>import("./h_test_app_header_component")
    , "App_Header_component"));
    return Header;
}

============================= h_test_app_header_component_div_onclick.tsx (ENTRY POINT)==

import * as qwik from "@builder.io/qwik";
export const App_Header_component_div_onClick = (ctx)=>console.log(ctx)
;

/*
{
  "origin": "test.tsx",
  "name": "App_Header_component_div_onClick",
  "entry": null,
  "canonicalFilename": "h_test_app_header_component_div_onclick",
  "extension": "tsx",
  "parent": "App_Header_component",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false
}
*/
============================= h_test_app_header_component.tsx (ENTRY POINT)==

import * as qwik from "@builder.io/qwik";
export const App_Header_component = ()=>{
    console.log("mount");
    return <div onClick={qwik.qrl(()=>import("./h_test_app_header_component_div_onclick")
    , "App_Header_component_div_onClick")}/>;
};

/*
{
  "origin": "test.tsx",
  "name": "App_Header_component",
  "entry": null,
  "canonicalFilename": "h_test_app_header_component",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/
== DIAGNOSTICS ==

[]
